--- a/assets/css/sass/parts/_homepage.scss
+++ b/assets/css/sass/parts/_homepage.scss
@@ -7,12 +7,16 @@
 
     > a {
       width: 150px;
+      height: 50px;
+      font-size: 16px;
       padding: 10px;
       background: $green;
       text-decoration: none;
-      text-align: center;
       font-weight: 300;
       color: $white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       &:hover {
         transform: scale(1.05);
